--- a/index.html
+++ b/index.html
@@ -11,13 +11,21 @@
 </head>
 
 <body>
-    <h1>Welcome to </h1>
-    <h1><span class="name-highlight">S.M. Ashfak</span> website</h1>
-    <h3>world-class Professional Web Devloper </h3>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore esse vitae autem veniam soluta recusandae aut ab omnis aperiam porro obcaecati laudantium, sint commodi in culpa illo expedita voluptatem dignissimos possimus velit est non!</p>
+    <section>
+        <div class="half-width">
+            <h1>Welcome to </h1>
+            <h1><span class="name-highlight">S.M. Ashfak</span> website</h1>
+            <h3>World-class Professional Web Devloper </h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore esse vitae autem veniam soluta recusandae aut ab omnis aperiam porro obcaecati laudantium, sint commodi in culpa illo expedita voluptatem dignissimospossimus velit est non!</p>
+        </div>
+        <div class="half-width">
+            <img src="images/profile1.png" alt="">
+        </div>
 
+    </section>
 
 
 
 </body>
+
 </html>
