added some code

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <section>
+    <section class="top-banner">
         <div class="half-width">
             <h1>Welcome to </h1>
             <h1><span class="name-highlight">S.M. Ashfak</span> website</h1>
