--- a/index.html
+++ b/index.html
@@ -17,13 +17,24 @@
             <h1><span class="name-highlight">S.M. Ashfak</span> website</h1>
             <h3>World-class Professional Web Devloper </h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore esse vitae autem veniam soluta recusandae aut ab omnis aperiam porro obcaecati laudantium, sint commodi in culpa illo expedita voluptatem dignissimospossimus velit est non!</p>
+            <a class="link-button" target="_blank" href="https://github.com/smashfakuddin">Hire Me</a>
         </div>
         <div class="half-width">
-            <img src="images/profile1.png" alt="">
+            <img src="images/profile1.png" alt="profile picture">
         </div>
-
     </section>
 
+    <section class="dream-area">
+        <div class="half-width">
+            <img src="images/profile2.png" alt="profile picture">
+        </div>
+        <div class="half-width">
+            <h2>Dream Big </h2>
+            <h3>Become world's noumber one developer </h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore esse vitae autem veniam soluta recusandae aut ab omnis aperiam porro obcaecati laudantium, sint commodi in culpa illo expedita voluptatem dignissimospossimus velit est non!</p>
+            <a class="link-button" target="_blank" href="https://github.com/smashfakuddin">Download Resume</a>
+        </div>
+    </section>
 
 
 </body>
