--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <section class="top-banner">
         <div class="half-width">
             <h1>Welcome to </h1>
-            <h1><span class="name-highlight">S.M. Ashfak</span> website</h1>
-            <h3>World-class Professional Web Devloper </h3>
+            <h1><span class="orange-highlight">S.M. Ashfak</span> website</h1>
+            <h3 >World-class Professional Web Devloper </h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore esse vitae autem veniam soluta recusandae aut ab omnis aperiam porro obcaecati laudantium, sint commodi in culpa illo expedita voluptatem dignissimospossimus velit est non!</p>
             <a class="link-button" target="_blank" href="https://github.com/smashfakuddin">Hire Me</a>
         </div>
@@ -35,8 +35,23 @@
             <a class="link-button" target="_blank" href="https://github.com/smashfakuddin">Download Resume</a>
         </div>
     </section>
-
-
+    <section class="experience-area">
+        <h2>Experiences</h2>
+        <div class="half-width single-experience" id="full-stack">
+                <h2>Full Stack Web Developer</h2>
+                <h3 class="orange-highlight">2021-present | Pro level Web Developer</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quaerat eaque reiciendis, aliquid cum enim error sit labore, adipisci rem nisi nesciunt. Error, esse laudantium.</p>
+        </div>
+        <div class="half-width single-experience" id="baby-web"> 
+                <h2>Baby Web Developer</h2>
+                <h3 class="orange-highlight">2020-2021 | Programing Hero Learner</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quaerat eaque reiciendis, aliquid cum enim error sit labore, adipisci rem nisi nesciunt. Error, esse laudantium.</p>
+        </div>
+        </div>    
+    </section>
+    <footer>
+        <p> © S.M. Ashfak Uddin, all rights reserved</p>
+    </footer>
 </body>
 
 </html>
